test/regress/coverage-item-lookup-Y-break.test
; Test item_t::lookup break for 'Y' prefix
2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --format '%(Yfoo)\n' -> 1
__ERROR__
While calculating format expression:
  Yfoo
While evaluating value expression:
  Yfoo
  ^^^^
While handling posting from "$FILE", line 3:
>     Expenses:Food    $10.00
Error: Unknown identifier 'Yfoo'
end test
